# chrono-sync

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  FAILURE_SCENARIOS.md  GETTING_STARTED.md  INTERVIEW_QA.md  asset-brief.md
src/: lib.rs  main.rs
tests/: causality.rs
